//    Copyright 2018 Google Inc.
//
//    Licensed under the Apache License, Version 2.0 (the "License");
//    you may not use this file except in compliance with the License.
//    You may obtain a copy of the License at
//
//        https://www.apache.org/licenses/LICENSE-2.0
//
//    Unless required by applicable law or agreed to in writing, software
//    distributed under the License is distributed on an "AS IS" BASIS,
//    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//    See the License for the specific language governing permissions and
//    limitations under the License.

syntax = "proto3";

package google.fhir.stu3.proto;

import "proto/stu3/annotations.proto";
import "proto/stu3/codes.proto";
import "proto/stu3/datatypes.proto";
import "proto/stu3/resources.proto";
import "proto/stu3/extensions.proto";
import "proto/stu3/metadatatypes.proto";

option java_multiple_files = true;
option java_package = "com.google.fhir.stu3.proto";

// Auto-generated from StructureDefinition for Observation-genetics.
// Measurements and simple assertions.
// See http://hl7.org/fhir/StructureDefinition/observation-genetics
message ObservationGenetics {
  option (structure_definition_kind) = KIND_RESOURCE;
  option (fhir_profile_base) =
      "http://hl7.org/fhir/StructureDefinition/Observation";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/observation-genetics";

  // Logical id of this artifact
  Id id = 1;

  // Metadata about the resource
  Meta meta = 2;

  // A set of rules under which this content was created
  Uri implicit_rules = 3;

  // Language of the resource content
  LanguageCode language = 4;

  // Text summary of the resource, for human interpretation
  Narrative text = 5;

  // Contained, inline Resources
  repeated ContainedResource contained = 6;

  // Extension
  repeated Extension extension = 7;

  // Extensions that cannot be ignored
  repeated Extension modifier_extension = 8;

  // Business Identifier for observation
  repeated Identifier identifier = 9;

  // Fulfills plan, proposal or order
  repeated Reference based_on = 10;

  // registered | preliminary | final | amended +
  ObservationStatusCode status = 11
      [(validation_requirement) = REQUIRED_BY_FHIR];

  // Classification of  type of observation
  repeated CodeableConcept category = 12;

  // Type of observation (code / type)
  CodeableConcept code = 13 [(validation_requirement) = REQUIRED_BY_FHIR];

  // Who and/or what this is about
  Reference subject = 14;

  // Healthcare event during which this observation is made
  Reference context = 15;

  // Clinically relevant time/time-period for observation
  message Effective {
    oneof effective {
      DateTime date_time = 1;
      Period period = 2;
    }
  }
  Effective effective = 16 [(is_choice_type) = true];

  // Date/Time this was made available
  Instant issued = 17;

  // Who is responsible for the observation
  repeated Reference performer = 18;

  // Actual result
  message Value {
    oneof value {
      Quantity quantity = 1;
      CodeableConcept codeable_concept = 2;
      String string_value = 3 [json_name = "string"];
      Boolean boolean = 4;
      Range range = 5;
      Ratio ratio = 6;
      SampledData sampled_data = 7;
      Attachment attachment = 8;
      Time time = 9;
      DateTime date_time = 10;
      Period period = 11;
    }
  }
  Value value = 19 [(is_choice_type) = true];

  // Why the result is missing
  CodeableConcept data_absent_reason = 20;

  // High, low, normal, etc.
  CodeableConcept interpretation = 21;

  // Comments about result
  String comment = 22;

  // Observed body part
  CodeableConcept body_site = 23;

  // How it was done
  CodeableConcept method = 24;

  // Specimen used for this observation
  Reference specimen = 25;

  // (Measurement) Device
  Reference device = 26;

  // Provides guide for interpretation
  message ReferenceRange {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored
    repeated Extension modifier_extension = 3;

    // Low Range, if relevant
    SimpleQuantity low = 4;

    // High Range, if relevant
    SimpleQuantity high = 5;

    // Reference range qualifier
    CodeableConcept type = 6;

    // Reference range population
    repeated CodeableConcept applies_to = 7;

    // Applicable age range, if relevant
    Range age = 8;

    // Text based reference range in an observation
    String text = 9;
  }
  repeated ReferenceRange reference_range = 27;

  // Resource related to this observation
  message Related {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored
    repeated Extension modifier_extension = 3;

    // has-member | derived-from | sequel-to | replaces | qualified-by |
    // interfered-by
    ObservationRelationshipTypeCode type = 4;

    // Resource that is related to this one
    Reference target = 5 [(validation_requirement) = REQUIRED_BY_FHIR];
  }
  repeated Related related = 28;

  // Component results
  message Component {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Extensions that cannot be ignored
    repeated Extension modifier_extension = 3;

    // Type of component observation (code / type)
    CodeableConcept code = 4 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Actual component result
    message Value {
      oneof value {
        Quantity quantity = 1;
        CodeableConcept codeable_concept = 2;
        String string_value = 3 [json_name = "string"];
        Range range = 4;
        Ratio ratio = 5;
        SampledData sampled_data = 6;
        Attachment attachment = 7;
        Time time = 8;
        DateTime date_time = 9;
        Period period = 10;
      }
    }
    Value value = 5 [(is_choice_type) = true];

    // Why the component result is missing
    CodeableConcept data_absent_reason = 6;

    // High, low, normal, etc.
    CodeableConcept interpretation = 7;

    // Provides guide for interpretation of component result
    repeated ReferenceRange reference_range = 8;
  }
  repeated Component component = 29;

  // DNA sequence variant
  CodeableConcept d_n_a_sequence_variant_name = 30 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsDNASequenceVariantName"
  ];

  // DNA sequence variant ID
  CodeableConcept d_n_a_variant_id = 31 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsDNAVariantId"
  ];

  // DNA sequence variant type
  CodeableConcept d_n_a_sequence_variant_type = 32 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsDNASequenceVariantType"
  ];

  // Amino acid change
  CodeableConcept amino_acid_change_name = 33 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsAminoAcidChangeName"
  ];

  // Amino Acid Change Type
  CodeableConcept amino_acid_change_type = 34 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsAminoAcidChangeType"
  ];

  // HGNC gene symbol
  CodeableConcept gene_symbol = 35
      [(fhir_inlined_extension_url) =
           "http://hl7.org/fhir/StructureDefinition/observation-geneticsGene"];

  // DNA region name
  String d_n_a_region_name = 36 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsDNARegionName"
  ];

  // Name of allele
  CodeableConcept allele_name = 37 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsAlleleName"
  ];

  // The level of occurrence of a single DNA sequence variant within a set of
  // chromosomes: Heteroplasmic / Homoplasmic / Homozygous / Heterozygous /
  // Hemizygous
  CodeableConcept allelic_state = 38 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsAllelicState"
  ];

  // Allele frequency
  Decimal allelic_frequency = 39 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsAllelicFrequency"
  ];

  // Copy number variation
  CodeableConcept copy_number_event = 40 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsCopyNumberEvent"
  ];

  // Genomic source class
  CodeableConcept genomic_source_class = 41 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsGenomicSourceClass"
  ];

  // Phase set identifier (UUID/OID)
  Uri phase_set = 42 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsPhaseSet"
  ];

  // Sequence
  repeated Reference sequence = 43 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsSequence"
  ];

  // Clinical interpretations for variant
  Reference interpretation_slice = 44 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/observation-geneticsInterpretation"
  ];
}

// Auto-generated from StructureDefinition for DataElement constraint on
// ElementDefinition data type. Definition of an element in a resource or
// extension. See http://hl7.org/fhir/StructureDefinition/elementdefinition-de
message ElementdefinitionDe {
  option (structure_definition_kind) = KIND_COMPLEX_TYPE;
  option (fhir_profile_base) =
      "http://hl7.org/fhir/StructureDefinition/ElementDefinition";
  option (fhir_structure_definition_url) =
      "http://hl7.org/fhir/StructureDefinition/elementdefinition-de";

  // xml:id (or equivalent in JSON)
  String id = 1;

  // Additional Content defined by implementations
  repeated Extension extension = 2;

  // Path of the element in the hierarchy of elements
  String path = 3 [(validation_requirement) = REQUIRED_BY_FHIR];

  // Name for this particular element (in a set of slices)
  String slice_name = 5;

  // Name for element to display with or prompt for element
  String label = 6;

  // Corresponding codes in terminologies
  repeated Coding code = 7;

  // Full formal definition as narrative text
  Markdown definition = 10;

  // Comments about the use of this element
  Markdown comment = 11;

  // Why this resource has been created
  Markdown requirements = 12;

  // Other names
  repeated String alias = 13;

  // Minimum Cardinality
  UnsignedInt min = 14;

  // Maximum Cardinality (a number or *)
  String max = 15;

  // Base definition information for tools
  message Base {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Path that identifies the base element
    String path = 3 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Min cardinality of the base element
    UnsignedInt min = 4 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Max cardinality of the base element
    String max = 5 [(validation_requirement) = REQUIRED_BY_FHIR];
  }
  Base base = 16;

  // Data type and Profile for this element
  message TypeRef {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Data type or Resource (reference to definition)
    Uri code = 3 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Profile (StructureDefinition) to apply to reference target (or IG)
    Uri target_profile = 5;

    // either | independent | specific
    ReferenceVersionRulesCode versioning = 7;
  }
  repeated TypeRef type = 18;

  // Specified value if missing from instance
  message DefaultValue {
    oneof default_value {
      Base64Binary base64_binary = 1;
      Boolean boolean = 2;
      Code code = 3;
      Date date = 4;
      DateTime date_time = 5;
      Decimal decimal = 6;
      Id id = 7;
      Instant instant = 8;
      Integer integer = 9;
      Markdown markdown = 10;
      Oid oid = 11;
      PositiveInt positive_int = 12;
      String string_value = 13 [json_name = "string"];
      Time time = 14;
      UnsignedInt unsigned_int = 15;
      Uri uri = 16;
      Address address = 17;
      Age age = 18;
      Annotation annotation = 19;
      Attachment attachment = 20;
      CodeableConcept codeable_concept = 21;
      Coding coding = 22;
      ContactPoint contact_point = 23;
      Count count = 24;
      Distance distance = 25;
      Duration duration = 26;
      HumanName human_name = 27;
      Identifier identifier = 28;
      Money money = 29;
      Period period = 30;
      Quantity quantity = 31;
      Range range = 32;
      Ratio ratio = 33;
      Reference reference = 34;
      SampledData sampled_data = 35;
      Signature signature = 36;
      Timing timing = 37;
      Meta meta = 38;
    }
  }
  DefaultValue default_value = 19 [(is_choice_type) = true];

  // Implicit meaning when this element is missing
  Markdown meaning_when_missing = 20;

  // What the order of the elements means
  String order_meaning = 21;

  // Example value (as defined for type)
  message Example {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Describes the purpose of this example
    String label = 3 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Value of Example (one of allowed types)
    message Value {
      oneof value {
        Base64Binary base64_binary = 1;
        Boolean boolean = 2;
        Code code = 3;
        Date date = 4;
        DateTime date_time = 5;
        Decimal decimal = 6;
        Id id = 7;
        Instant instant = 8;
        Integer integer = 9;
        Markdown markdown = 10;
        Oid oid = 11;
        PositiveInt positive_int = 12;
        String string_value = 13 [json_name = "string"];
        Time time = 14;
        UnsignedInt unsigned_int = 15;
        Uri uri = 16;
        Address address = 17;
        Age age = 18;
        Annotation annotation = 19;
        Attachment attachment = 20;
        CodeableConcept codeable_concept = 21;
        Coding coding = 22;
        ContactPoint contact_point = 23;
        Count count = 24;
        Distance distance = 25;
        Duration duration = 26;
        HumanName human_name = 27;
        Identifier identifier = 28;
        Money money = 29;
        Period period = 30;
        Quantity quantity = 31;
        Range range = 32;
        Ratio ratio = 33;
        Reference reference = 34;
        SampledData sampled_data = 35;
        Signature signature = 36;
        Timing timing = 37;
        Meta meta = 38;
      }
    }
    Value value = 4
        [(is_choice_type) = true, (validation_requirement) = REQUIRED_BY_FHIR];
  }
  repeated Example example = 24;

  // Minimum Allowed Value (for some types)
  message MinValue {
    oneof min_value {
      Date date = 1;
      DateTime date_time = 2;
      Instant instant = 3;
      Time time = 4;
      Decimal decimal = 5;
      Integer integer = 6;
      PositiveInt positive_int = 7;
      UnsignedInt unsigned_int = 8;
      Quantity quantity = 9;
    }
  }
  MinValue min_value = 25 [(is_choice_type) = true];

  // Maximum Allowed Value (for some types)
  message MaxValue {
    oneof max_value {
      Date date = 1;
      DateTime date_time = 2;
      Instant instant = 3;
      Time time = 4;
      Decimal decimal = 5;
      Integer integer = 6;
      PositiveInt positive_int = 7;
      UnsignedInt unsigned_int = 8;
      Quantity quantity = 9;
    }
  }
  MaxValue max_value = 26 [(is_choice_type) = true];

  // Max length for strings
  Integer max_length = 27;

  // Reference to invariant about presence
  repeated Id condition = 28;

  // Condition that must evaluate to true
  message Constraint {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Target of 'condition' reference above
    Id key = 3 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Why this constraint is necessary or appropriate
    String requirements = 4;

    // error | warning
    ConstraintSeverityCode severity = 5
        [(validation_requirement) = REQUIRED_BY_FHIR];

    // Human description of constraint
    String human = 6 [(validation_requirement) = REQUIRED_BY_FHIR];

    // FHIRPath expression of constraint
    String expression = 7 [(validation_requirement) = REQUIRED_BY_FHIR];

    // XPath expression of constraint
    String xpath = 8;

    // Reference to original source of constraint
    Uri source = 9;
  }
  repeated Constraint constraint = 29;

  // If the element must supported
  Boolean must_support = 30;

  // ValueSet details if this is coded
  message ElementDefinitionBinding {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // required | extensible | preferred | example
    BindingStrengthCode strength = 3
        [(validation_requirement) = REQUIRED_BY_FHIR];

    // Human explanation of the value set
    String description = 4;

    // Source of value set
    message ValueSet {
      oneof value_set {
        Uri uri = 1;
        Reference reference = 2;
      }
    }
    ValueSet value_set = 5 [(is_choice_type) = true];
  }
  ElementDefinitionBinding binding = 33;

  // Map element to another set of definitions
  message Mapping {
    // xml:id (or equivalent in JSON)
    String id = 1;

    // Additional Content defined by implementations
    repeated Extension extension = 2;

    // Reference to mapping declaration
    Id identity = 3 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Computable language of mapping
    MimeTypeCode language = 4;

    // Details of the mapping
    String map = 5 [(validation_requirement) = REQUIRED_BY_FHIR];

    // Comments about the mapping or its use
    String comment = 6;
  }
  repeated Mapping mapping = 34;

  // Extension
  repeated String question = 35 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/elementdefinition-question"
  ];

  // Extension
  ElementDefinitionAllowedUnits.Value allowed_units = 36 [
    (fhir_inlined_extension_url) =
        "http://hl7.org/fhir/StructureDefinition/elementdefinition-allowedUnits"
  ];
}
